@@ -60,14 +60,12 @@
   <body class="no-js<% if ($embedded) { %> embedded<% } %>" itemscope itemtype="http://schema.org/<%= stash('schematype') || 'WebApplication' %>">
     <script>document.body.classList.remove('no-js');</script>
     <div id="kalamar-bg"></div>
-
     
     %= include 'partial/side', embedded => $embedded
     
     % unless ($embedded) {
       %= include 'partial/header'
     % }
-
 
     <noscript>
       <p id="activate"><%= loc 'activateJS' %></p>
